# basket

./: .gitignore  CMakeLists.txt  README.md  basket.pro  basket.qrc
backgrounds/: CMakeLists.txt
basket/: basket.pro  basket.qrc  config.h.cmake  icons.py
basket/oxygen/: index.theme
basket/oxygen/22x22/mimetypes/: .directory
basket/oxygen/256x256/mimetypes/: .directory
basket/oxygen/256x256/places/: .directory
basket/oxygen/48x48/actions/: .directory
basket/po/: CMakeLists.txt
basket/src/: about.cpp  about.h  archive.cpp  archive.h  backgroundmanager.cpp  backup.cpp  backup.h  backupdialog.cpp  backupdialog.h  basket.desktop  basket.pri  basketfactory.cpp  basketlistview.cpp  basketproperties.h  basketscene.cpp  basketscene.h  basketstatusbar.cpp  basketstatusbar.h  bnpview.cpp  bnpview.h  colorpicker.cpp  crashhandler.cpp  crashhandler.h  diskerrordialog.cpp  filter.cpp  filter.h  formatimporter.cpp  formatimporter.h  global.cpp  global.h  history.cpp  htmlexporter.cpp  kcolorcombo2.h  kgpgme.cpp  likeback.cpp  likeback.h  likeback_p.h  linklabel.cpp  linklabel.h  main.cpp  (+25 more)
basket/ts/: cs_CZ.ts  da_DK.ts  de_DE.ts  es_ES.ts  fr_FR.ts  it_IT.ts  ja_JP.ts  nl_NL.ts  nn_NO.ts  pl_PL.ts  pt_PT.ts  ru_RU.ts  tr_TR.ts  zh_CN.ts  zh_TW.ts
basket/welcome/: Welcome_en_US.baskets  Welcome_it.baskets  Welcome_ja.baskets  Welcome_pt.baskets  Welcome_ru.baskets
file-integration/: CMakeLists.txt
images/: CMakeLists.txt
quazip/: CMakeLists.txt  quazip.pro
src/: CMakeLists.txt  about.cpp  about.h  about.ui  archive.cpp  archive.h  backgroundmanager.cpp  backgroundmanager.h  backup.cpp  backup.h  backupdialog.ui  basketfactory.cpp  basketlistview.cpp  basketlistview.h  basketproperties.cpp  basketproperties.h  basketproperties.ui  basketscene.cpp  basketscene.h  basketstatusbar.cpp  basketstatusbar.h  bnpview.cpp  bnpview.h  colorpicker.cpp  crashhandler.cpp  debugwindow.cpp  diskerrordialog.cpp  exporterdialog.cpp  exporterdialog.h  filter.cpp  filter.h  focusedwidgets.cpp  focusedwidgets.h  formatimporter.cpp  formatimporter.h  global.cpp  global.h  htmlexporter.cpp  htmlexporter.h  kcolorcombo2.cpp  (+40 more)
src/quazip-0.7/: CMakeLists.txt
src/quazip-0.7/quazip/: CMakeLists.txt
welcome/: CMakeLists.txt  Welcome_de.baskets  Welcome_fr.baskets  Welcome_nn.baskets
zlib/: zlib.pro
